--- a/conf/sbdl.conf
+++ b/conf/sbdl.conf
@@ -2,12 +2,23 @@
 enable.hive = false
 hive.database = null
 kafka.topic = sbdl_kafka_cloud
+account.filter = active_ind == 1
+party.filter =
+address.filter =
 [QA]
 enable.hive = true
 hive.database = sbdl_db_qa
 kafka.topic = sbdl_kafka_qa
+account.filter = active_ind == 1
+party.filter =
+address.filter =
 [PROD]
 enable.hive = true
 hive.database = sbdl_db
 kafka.topic = sbdl_kafka
+account.filter = active_ind == 1
+party.filter =
+address.filter =
+
+
 
